Simple binding & interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
 <h1>Hello world!</h1>
+
+<p>title - {{title}}</p>
+<p>number - {{number / 100}}</p>
+<p>arr - {{arr}}</p>
+<p>obj - {{obj?.b?.c}}</p>
+<p>40 + 2 = {{40 + 2}}</p>
+<p>{{"Hello " + "World " + "!"}}</p>
+
+<hr>
+<p>интерполяция <code><img src="{{img}}" alt="react"></code></p>
+<img src="{{img}}" alt="react">
+
+<p>односторонний байндинг <code></code></p>
+<img [src]="img" alt="react">
+
+<hr>
+
+<app-post></app-post>
+<app-post></app-post>
+
+<hr>
+
+<app-post4></app-post4>
