--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,88 @@
 <h1>Hello world!</h1>
+
+<button (click)="backgroundToggle = !backgroundToggle">toggle</button>
+
+<!--NOT WORK-->
+<!--<div [ngStyle]="{-->
+<!--  width: '200px',-->
+<!--  height: '200px',-->
+<!--  borderRadius: '5px',-->
+<!--  border: '1px solid #ccc',-->
+<!--  background: backgroundToggle ? 'red' : 'blue',-->
+<!--}">-->
+<!--</div>-->
+
+<!--WORK-->
+
+<h2>Директивы</h2>
+
+<fieldset>
+  <legend>[ngClass]="{{ "{red: backgroundToggle, blue: !backgroundToggle}" }}"</legend>
+  <p [ngClass]="{
+    red: backgroundToggle,
+    blue: !backgroundToggle
+  }">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolore.
+  </p>
+</fieldset>
+
+<!--WORK FINE-->
+<fieldset>
+  <legend>[class.blue]="!backgroundToggle" <br> [class.red]="backgroundToggle"</legend>
+  <p
+    [class.blue]="!backgroundToggle"
+    [class.red]="backgroundToggle"
+  >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nesciunt?
+  </p>
+</fieldset>
+
+<h2>Структурные директивы</h2>
+
+<fieldset>
+  <legend>*ngIf="backgroundToggle; else blueParagraph"</legend>
+  <p *ngIf="backgroundToggle; else blueParagraph" class="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, libero.</p>
+  <ng-template #blueParagraph>
+    <p class="blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, minima.</p>
+  </ng-template>
+
+</fieldset>
+
+<fieldset>
+  <legend>[ngSwitch]="backgroundToggle"</legend>
+  <div [ngSwitch]="backgroundToggle">
+    <p *ngSwitchDefault class="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, libero.</p>
+    <p *ngSwitchCase="true" class="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, libero.</p>
+    <p *ngSwitchCase="false" class="blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, libero.</p>
+  </div>
+</fieldset>
+
+<h2>Циклы</h2>
+
+<fieldset>
+  <legend>*ngFor (for of)</legend>
+  <ol>
+    <li *ngFor="let animal of animals; let index = index">{{ animal }} - {{ index + 2 }}</li>
+  </ol>
+</fieldset>
+
+<fieldset>
+  <legend>*ngFor (for of) CONTAIN</legend>
+  <ul style="list-style:none">
+    <li *ngFor="let post of posts">
+      <span>
+        <h3 style="display: inline; padding-right: 10px">{{ post.title }}</h3>
+        <i>{{ post.author }}</i>
+      </span>
+      <h4>Comments:</h4>
+      <dl *ngFor="let comment of post.comments; let index = index">
+        <dt>{{ index + 1 }}. {{ comment.name }}:</dt>
+        <dd><i>"{{ comment.text }}"</i></dd>
+      </dl>
+    <hr>
+    </li>
+  </ul>
+</fieldset>
+
+
+
+
