--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container">
   <h1>Angular Component</h1>
 
+  <app-post-form></app-post-form>
+
+  <hr>
+
+  <app-post
+    *ngFor="let post of posts"
+    [post]="post"
+  ></app-post>
+
 </div>
