--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,12 @@
   <app-post
     *ngFor="let post of posts"
     [post]="post"
-  ></app-post>
+    (handleRemove)="removePost($event)"
+  >
+    <div #info>
+      <small *ngIf="post.text.length > 10; else short">Big post</small>
+      <ng-template #short><small>Small post</small></ng-template>
+    </div>
+  </app-post>
 
 </div>
