--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,76 @@
 <div class="container">
-  <h1>Angular Component</h1>
+  <h1>Angular Pipes</h1>
 
+  <fieldset>
+    <legend><h3>Pipe for type of number</h3></legend>
+
+    <p>{{ e | number: '1.1-5' }}</p>
+    <p>{{ e | number: '3.1-2' }}</p>
+    <p>{{ e | number: '1.0-0' }}</p>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>Pipe for type of string</h3></legend>
+
+    <p>{{ str | titlecase | slice: 0: -2 }}</p>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>Pipe for type of date</h3></legend>
+
+    <p>{{ date | date: 'MMMM dd, yyy, HH:mm:ss' }}</p>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>More pipes</h3></legend>
+
+    <p>{{ float }}</p>
+    <p>{{ float | currency }}</p>
+    <p>{{ float | percent }}</p>
+
+    <pre>{{ obj | json }}</pre>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>Custom pipe</h3></legend>
+
+    <p>{{ 10 | mult }}</p>
+    <p>{{ 10 | mult: 2 }}</p>
+    <p>{{ 10 | mult: 3 }}</p>
+    <br>
+    <p>{{ '   hello world   ' | titlecase | exNarks }}</p>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>Filtration list</h3></legend>
+
+    <button class="btn" (click)="searchField = 'title'">Title</button>
+    <button class="btn" (click)="searchField = 'text'">Text</button>
+
+    <hr>
+
+    <button class="btn" (click)="addPost()">Add post</button>
+
+    <input placeholder="search posts" type="text" [(ngModel)]="search">
+
+    <div *ngFor="let post of posts | filter: search:searchField" class="card">
+      <h2>{{ post.title }}</h2>
+      <p>{{ post.text }}</p>
+    </div>
+  </fieldset>
+  <br>
+
+  <fieldset>
+    <legend><h3>Async Pipe</h3></legend>
+
+    <p>Wait for it...{{ promise | async }}</p>
+    <p>(With async pipe)Date: {{ date$ | async | date: 'MMMM dd, yyy, HH:mm:ss' }}</p>
+    <p>(Without async pipe)Date: {{ dateStream | date: 'MMMM dd, yyy, HH:mm:ss' }}</p>
+  </fieldset>
+  <br>
 </div>
