create template for http client

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
 <div class="container">
-  <h1>Angular Component</h1>
+  <h1>Angular HttpClient</h1>
 
+  <div class="card">
+    <div class="form-control">
+      <input type="text" placeholder="Name">
+    </div>
+    <button class="btn">Add</button>
+    <button class="btn">Download..</button>
+  </div>
+
+  <hr>
+
+  <div class="card">
+    <p>
+      <span class="completed">Name</span>
+      <span>
+        <button class="btn btn-danger">Delete</button>
+        <button class="btn">Finish</button>
+      </span>
+    </p>
+  </div>
 </div>
