--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,13 @@ input {
     border: 1px solid green;
   }
 }
+
+.card--content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.completed {
+  text-decoration: line-through;
+}
