improve method post

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,25 @@
 
   <div class="card">
     <div class="form-control">
-      <input type="text" placeholder="Name">
+      <input type="text" placeholder="Name" [(ngModel)]="todoTitle">
     </div>
-    <button class="btn">Add</button>
-    <button class="btn">Download..</button>
+    <button class="btn" (click)="addTodo()">Add</button>
+    <button class="btn" (click)="fetchTodos()">Download..</button>
   </div>
 
   <hr>
 
-  <div class="card card--content" *ngFor="let todo of todos">
-    <span [class.completed]="todo.completed">{{ todo.title | titlecase }}</span>
-    <span>
+  <div *ngIf="!loading; else loadingBlock">
+    <div class="card card--content" *ngFor="let todo of todos">
+      <span [class.completed]="todo.completed">{{ todo.title | titlecase }}</span>
+      <span>
       <button class="btn btn-danger">Delete</button>
       <button class="btn" [disabled]="todo.completed">Done</button>
     </span>
+    </div>
   </div>
+
+  <ng-template #loadingBlock>
+    <p><i>loading....</i></p>
+  </ng-template>
 </div>
