--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,15 +3,15 @@ p {
 }
 
 
-input {
-  &.ng-invalid.ng-touched {
-    border: 1px solid red;
-  }
-
-  &.ng-valid.ng-touched {
-    border: 1px solid green;
-  }
-}
+//input {
+//  &.ng-invalid.ng-touched {
+//    border: 1px solid red;
+//  }
+//
+//  &.ng-valid.ng-touched {
+//    border: 1px solid green;
+//  }
+//}
 
 .card--content {
   display: flex;
