--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <h1>Angular Component</h1>
 
+  <button class="btn" (click)="stop()">Stop interval</button>
+  <button class="btn btn-danger" (click)="next()">Next value</button>
 </div>
