--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,17 +1,45 @@
 <h1>Posts page</h1>
 
-<button class="btn">
+<button
+  class="btn"
+  routerLink="/posts"
+  fragment="fragment"
+  [queryParams]="{showIds: true}"
+>
   Show Ids
 </button>
-<button class="btn">
-  Show Ids (program)
+<button
+  class="btn"
+  (click)="toggleIdsProgram()"
+>
+  Toggle Ids (program)
 </button>
 
 <div class="card" *ngFor="let post of postsService.posts">
   <h4>
-    <a href="#">
-      <strong>(ID {{post.id}})</strong>
+    <a [routerLink]="['/posts', post.id]">
+      <strong *ngIf="showIds">(ID {{post.id}})</strong>
       {{post.title}}
     </a>
   </h4>
+</div>
+
+<div>
+  <div *ngIf="fragment === 'Lorem 1'; then thenBlock else elseBlock"></div>
+  <ng-template #thenBlock><h3 style="color: #dc3545">Lorem 1</h3></ng-template>
+  <ng-template #elseBlock><h3>Lorem 1</h3></ng-template>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate dicta, eius, iste nam nisi officiis pariatur, quae quod rerum voluptas voluptatem! A ab aut beatae consectetur doloribus ea enim, expedita explicabo fugit illo in ipsa laboriosam nam natus, necessitatibus nemo neque non numquam odit officia perspiciatis quaerat quam quia rem, suscipit tempore ut? Ab consequatur dicta fugiat fugit iure neque non praesentium. Commodi deleniti eveniet necessitatibus vitae. Autem consequuntur dicta eveniet, expedita magnam natus odio quod! Autem commodi doloremque excepturi nihil quis! Accusamus alias corporis cupiditate doloribus fuga iste laboriosam libero, modi nostrum, odio optio veniam. Deleniti, dolorem eveniet.</p>
+  <br>
+  <h3>Lorem 2</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate dicta, eius, iste nam nisi officiis pariatur, quae quod rerum voluptas voluptatem! A ab aut beatae consectetur doloribus ea enim, expedita explicabo fugit illo in ipsa laboriosam nam natus, necessitatibus nemo neque non numquam odit officia perspiciatis quaerat quam quia rem, suscipit tempore ut? Ab consequatur dicta fugiat fugit iure neque non praesentium. Commodi deleniti eveniet necessitatibus vitae. Autem consequuntur dicta eveniet, expedita magnam natus odio quod! Autem commodi doloremque excepturi nihil quis! Accusamus alias corporis cupiditate doloribus fuga iste laboriosam libero, modi nostrum, odio optio veniam. Deleniti, dolorem eveniet.</p>
+  <br>
+  <h3>Lorem 3</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate dicta, eius, iste nam nisi officiis pariatur, quae quod rerum voluptas voluptatem! A ab aut beatae consectetur doloribus ea enim, expedita explicabo fugit illo in ipsa laboriosam nam natus, necessitatibus nemo neque non numquam odit officia perspiciatis quaerat quam quia rem, suscipit tempore ut? Ab consequatur dicta fugiat fugit iure neque non praesentium. Commodi deleniti eveniet necessitatibus vitae. Autem consequuntur dicta eveniet, expedita magnam natus odio quod! Autem commodi doloremque excepturi nihil quis! Accusamus alias corporis cupiditate doloribus fuga iste laboriosam libero, modi nostrum, odio optio veniam. Deleniti, dolorem eveniet.</p>
+  <br>
+  <h3>Lorem 4</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate dicta, eius, iste nam nisi officiis pariatur, quae quod rerum voluptas voluptatem! A ab aut beatae consectetur doloribus ea enim, expedita explicabo fugit illo in ipsa laboriosam nam natus, necessitatibus nemo neque non numquam odit officia perspiciatis quaerat quam quia rem, suscipit tempore ut? Ab consequatur dicta fugiat fugit iure neque non praesentium. Commodi deleniti eveniet necessitatibus vitae. Autem consequuntur dicta eveniet, expedita magnam natus odio quod! Autem commodi doloremque excepturi nihil quis! Accusamus alias corporis cupiditate doloribus fuga iste laboriosam libero, modi nostrum, odio optio veniam. Deleniti, dolorem eveniet.</p>
+  <br>
+  <h3>Lorem 5</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate dicta, eius, iste nam nisi officiis pariatur, quae quod rerum voluptas voluptatem! A ab aut beatae consectetur doloribus ea enim, expedita explicabo fugit illo in ipsa laboriosam nam natus, necessitatibus nemo neque non numquam odit officia perspiciatis quaerat quam quia rem, suscipit tempore ut? Ab consequatur dicta fugiat fugit iure neque non praesentium. Commodi deleniti eveniet necessitatibus vitae. Autem consequuntur dicta eveniet, expedita magnam natus odio quod! Autem commodi doloremque excepturi nihil quis! Accusamus alias corporis cupiditate doloribus fuga iste laboriosam libero, modi nostrum, odio optio veniam. Deleniti, dolorem eveniet.</p>
+  <br>
 </div>
